--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,8 +1,11 @@
 @charset "UTF-8";
 
+/*Formatacao do body*/
 body{
     background-color: rgba(21, 25, 29, 0.1);
 }
+
+/*Formatacao dos textos e titulos*/
 h1{
     color: black;
     text-shadow: 1px 1px 2px;
@@ -12,6 +15,76 @@ h2{
 }
 h3{
     text-shadow: 1px 1px 2px;
+}
+
+/*Formatacao do Menu*/
+nav#menu ul{
+    list-style: none;
+    text-transform: uppercase;
+    position: absolute;
+    top: 0px;
+    left: 450px;
+}
+nav#menu li{
+    display: inline-block;
+    background-color: #dddddd;
+    padding: 10px;
+    margin: 2px;
+    transition: background-color 1s;
+}
+nav#menu li:hover{
+    background-color: #606060;
+}
+nav#menu h1{
+    display: none;
+}
+nav#menu a{
+    color: black;
+    text-decoration: none;
+}
+nav#menu a:hover{
+    color: white;
+}
+
+/*Formatacao da imagem icone que muda de acordo o menu*/
+header#cabecalho img#icone{
+    position: absolute;
+    left: 900px;
+    top: 70px;
+}
+
+/*div principal do site*/
+div#interface{
+    width: 900px;
+    margin: -20px auto 0px auto;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+    padding: 20px;
+    background-color: white;
+}
+
+/*Formatacao do cabecalho*/
+header#cabecalho{
+    border-bottom: 1px #606060 solid;
+    height: 180px;
+    background-image: url("../_imagens/glass-logo-peq.jpg");
+    background-repeat: no-repeat;
+    background-position: 0px 80px;
+}
+header#cabecalho h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 30px;
+    color: #606060;
+    text-shadow: 1px 1px 1px black;
+    padding: 0px;
+    margin-bottom: 0px;
+}
+header#cabecalho h2{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 20px;
+    color: #888888;
+    text-shadow: 1px 1px 1px black;
+    padding: 0px;
+    margin-top: 0px;
 }
 
 /*Formatacao de imagens e legendas*/
@@ -40,20 +113,8 @@ figure.foto-legenda:hover figcaption{
     opacity: 1;
     
 }
-/*Formatacao do Menu*/
-nav#menu ul{
-    list-style: none;
-    text-transform: uppercase;
-    position: absolute;
-    top: 0px;
-    left: 350px;
-}
-nav#menu li{
-    display: inline-block;
-    background-color: #dddddd;
-    padding: 10px;
-    margin: 2px;
-}
-nav#menu h1{
-    display: none;
-}
+
+
+
+
+
