--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,4 +1,8 @@
 @charset "UTF-8";
+@font-face {
+    font-family: 'FonteLogo';
+    src: url("../_fonts/bubblegum-sans-regular.otf");
+}
 
 /*Formatacao do body*/
 body{
@@ -71,15 +75,15 @@ header#cabecalho{
     background-position: 0px 80px;
 }
 header#cabecalho h1{
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 30px;
+    font-family: 'fonteLogo';
+    font-size: 50px;
     color: #606060;
     text-shadow: 1px 1px 1px black;
     padding: 0px;
     margin-bottom: 0px;
 }
 header#cabecalho h2{
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: "Emblema One", system-ui;
     font-size: 20px;
     color: #888888;
     text-shadow: 1px 1px 1px black;
@@ -114,6 +118,28 @@ figure.foto-legenda:hover figcaption{
     
 }
 
+/*Formatacao da section*/
+section#corpo{
+    display: block;
+    width: 500px;
+    float: left;
+    border-right: 1px #606060 solid;
+    padding: 15px;
+}
+
+aside#lateral{
+    display: block;
+    width: 350px;
+    float: right;
+}
+
+footer#rodape{
+    clear: both;
+    border-top: 1px #606060 solid;
+}
+footer#rodape p{
+    text-align: center;
+}
 
 
 
