--- a/_css/estilo.css
+++ b/_css/estilo.css
@@ -1,65 +1,70 @@
 @charset "UTF-8";
+
 @font-face {
     font-family: 'FonteLogo';
     src: url("../_fonts/bubblegum-sans-regular.otf");
 }
 
 /*Formatacao do body*/
-body{
+body {
     background-color: rgba(21, 25, 29, 0.1);
-}
-
-/*Formatacao dos textos e titulos*/
-h1{
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14pt;
     color: black;
-    text-shadow: 1px 1px 2px;
+    text-align: justify;
 }
-h2{
-    text-shadow: 1px 1px 2px;
+a{
+    color: #606060;
+    text-decoration: none;
 }
-h3{
-    text-shadow: 1px 1px 2px;
+a:hover{
+    text-decoration: underline;
 }
 
 /*Formatacao do Menu*/
-nav#menu ul{
+nav#menu ul {
     list-style: none;
     text-transform: uppercase;
     position: absolute;
     top: 0px;
     left: 450px;
 }
-nav#menu li{
+
+nav#menu li {
     display: inline-block;
     background-color: #dddddd;
     padding: 10px;
     margin: 2px;
     transition: background-color 1s;
 }
-nav#menu li:hover{
+
+nav#menu li:hover {
     background-color: #606060;
 }
-nav#menu h1{
+
+nav#menu h1 {
     display: none;
 }
-nav#menu a{
+
+nav#menu a {
     color: black;
     text-decoration: none;
 }
-nav#menu a:hover{
+
+nav#menu a:hover {
     color: white;
 }
 
 /*Formatacao da imagem icone que muda de acordo o menu*/
-header#cabecalho img#icone{
+header#cabecalho img#icone {
     position: absolute;
     left: 900px;
     top: 70px;
 }
 
 /*div principal do site*/
-div#interface{
-    width: 900px;
+div#interface {
+    width: 1000px;
     margin: -20px auto 0px auto;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
     padding: 20px;
@@ -67,14 +72,15 @@ div#interface{
 }
 
 /*Formatacao do cabecalho*/
-header#cabecalho{
+header#cabecalho {
     border-bottom: 1px #606060 solid;
     height: 180px;
     background-image: url("../_imagens/glass-logo-peq.jpg");
     background-repeat: no-repeat;
     background-position: 0px 80px;
 }
-header#cabecalho h1{
+
+header#cabecalho h1 {
     font-family: 'fonteLogo';
     font-size: 50px;
     color: #606060;
@@ -82,7 +88,8 @@ header#cabecalho h1{
     padding: 0px;
     margin-bottom: 0px;
 }
-header#cabecalho h2{
+
+header#cabecalho h2 {
     font-family: "Emblema One", system-ui;
     font-size: 20px;
     color: #888888;
@@ -91,20 +98,61 @@ header#cabecalho h2{
     margin-top: 0px;
 }
 
+
+/*Formatacao da section*/
+section#corpo {
+    display: block;
+    width: 600px;
+    float: left;
+    border-right: 1px #606060 solid;
+    padding: 15px;
+}
+article#noticia-principal h2{
+    font-size: 24pt;
+    color: #606060;
+    background-color: #dddddd;
+    padding: 5px;
+    margin: 10px 0px 10px 0px;
+}
+
+/*Cabecalho do article*/
+header#cabecalho-artigo h1{
+    font-family: 'fonteLogo';
+    font-size: 30pt;
+    color: #606060;
+    margin: 0px;
+}
+header#cabecalho-artigo h2{
+    font-size: 20pt;
+    color: black;
+    background-color: #ffffff;
+    margin: 0px;
+}
+header#cabecalho-artigo h3{
+    font-size: 13pt;
+    color: black;
+    margin: 0px;
+}
+.direita{
+    text-align: right;
+}
+
 /*Formatacao de imagens e legendas*/
-figure.foto-legenda{
+figure.foto-legenda {
     position: relative;
     border: 8px solid white;
     box-shadow: 1px 1px 4px black;
 }
-figure.foto-legenda img{
+
+figure.foto-legenda img {
     width: 100%;
     height: 100%;
 }
-figure.foto-legenda figcaption{
+
+figure.foto-legenda figcaption {
     opacity: 0;
     position: absolute;
-    top:0px ;
+    top: 0px;
     background-color: rgba(0, 0, 0, 0.4);
     color: white;
     width: 100%;
@@ -113,34 +161,73 @@ figure.foto-legenda figcaption{
     box-sizing: border-box;
     transition: opacity 1.5s;
 }
-figure.foto-legenda:hover figcaption{
+
+figure.foto-legenda:hover figcaption {
     opacity: 1;
-    
+
 }
 
-/*Formatacao da section*/
-section#corpo{
-    display: block;
-    width: 500px;
-    float: left;
-    border-right: 1px #606060 solid;
-    padding: 15px;
+/*Formatacao da tabela de especificacoes*/
+table#tabela {
+    border: 1px solid #606060;
+    border-spacing: 0px;
+    margin: auto;
 }
-
-aside#lateral{
+table#tabela caption{
+    color: #888888;
+    font-size: 16pt;
+    font-weight: bold;
+}
+table#tabela caption span{
     display: block;
-    width: 350px;
     float: right;
+    color: black;
+    font-size: 10pt;
+    margin-top: 10px;
+}
+table#tabela td {
+    border: 1px solid #606060;
+    padding: 10px;
+    text-align: center;
+    vertical-align: middle;
+}
+table#tabela td.ce {
+    color: white;
+    background-color: #606060;
+    vertical-align: top;
+    font-weight: bold;
+}
+table#tabela td.cd {
+    background-color: #cecece;
 }
 
-footer#rodape{
+/*Formatacao das info laterais*/
+aside#lateral {
+    display: block;
+    width: 300px;
+    float: right;
+    background-color: #dddddd;
+    padding: 25px;
+    margin: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+aside#lateral h1{
+    font-family: 'fonteLogo';
+    font-size: 32pt;
+    color: #606060;
+}
+aside#lateral h2{
+    background-color: #606060;
+    color: white;
+    font-size: 18pt;
+    padding: 5px;
+}
+
+/*Formatacao do rodape*/
+footer#rodape {
     clear: both;
     border-top: 1px #606060 solid;
 }
-footer#rodape p{
+footer#rodape p {
     text-align: center;
 }
-
-
-
-
