--- a/_css/fotos.css
+++ b/_css/fotos.css
@@ -16,7 +16,7 @@ ul#album-fotos li{
     background-color: #ffffff;
     box-shadow: 1px 1px 3px rgba(0, 0, 0, .4);
     -webkit-transition: all .4s ease-in-out;
-    transition: all;
+    transition: all .4s ease-in-out;
 }
 ul#album-fotos li span{
     opacity: 0;
